tests/break/invalid/semantic/BreakNotInLoop1.wacc
# break is not used inside a loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  break
end
